samples/_failures_safe/1761180955_347f24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_68b24f84.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_68b24f84.c:154:38: error: expected ‘)’ at end of input
  154 |     if (input == NULL || strlen(input
      |                                ~     ^
      |                                      )
./samples/SAFE/__tmp_68b24f84.c:154:5: error: expected declaration or statement at end of input
  154 |     if (input == NULL || strlen(input
      |     ^~
